* Adding SVT AV1 dual pass, tier, scene detection, and tile parameters
* Adding #67 Status Panel to view encoding logs
* Adding #58 Support for cover attachments (thanks to -L0Lock-)
* Adding various speed improvements
* Adding changelog in GUI
* Adding #68 version upgrade dialogue
* Adding icons to encoders drop down
* Adding video filename path
* Adding check for new ffmpeg on startup
* Adding #69 nice feature for language selection (thanks to HannesJo0139)
* Adding #13 button to copy commands to clipboard and save to file
* Adding options to remove metadata and copy chapters
* Changing #8 logs to be separated into GUI and conversion logs
* Changing major internal re-write to keep encoding even if GUI dies
* Changing bitrate suggestion resolutions to be more readable with fps
* Changing command builders to specify the temporary files themselves
* Changing changelog to proper markdown
* Changing rotation and flip section to drop downs
* Fixing Windows taskbar does not always show icon
* Fixing #55 GUI logs by splitting them from core logs
* Fixing #42 log output from FFmpeg stopped due to PIPE filling up (thanks to Trevbams)
* Fixing that mkv cover attachments would show as video tracks
* Fixing plugins should not be available if no FFmpeg library for them
* Fixing error on audio tracks listing zero channels
* Removing support for the direct SVT AV1 encoder (fixes #24)
* Removing support for cutielog / socket based logging

## Version 2.6.3
* Fixing #71 #26 encoding issues in video files (thanks to -L0Lock-)
* Fixing tempfile issue with recursion on cleanup
* Fixing SVT AV1 command building raising errors on bad crop

## Version 2.6.2

* Switching windows builds from zeranoe.com to gyan.dev

## Version  2.6.1

* Adding HEVC crf suggestions back
* Fixing #62 VP9 and GIF crashing due to label bug (thanks to -L0Lock-)

## Version  2.6.0

* Adding AV1 AOM settings for cpu-used, tile-columns, tile-rows, row-mt
* Adding HEVC x265 setting for profile