@@ -1,0 +1,18 @@
+name: Run code linter "black"
+
+on:
+  push:
+    branches: [ master, develop, build, 3.0 ]
+  pull_request:
+    branches: [ master, develop ]
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - run: pip install black
+    - run: black --check
