@@ -1,32 +1,0 @@
-name: Package Application with Pyinstaller
-
-on:
-  push:
-    branches: [ master, develop, build, 3.0 ]
-  pull_request:
-    branches: [ master, develop ]
-
-jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - run: sudo apt install python3-dev python3-pyqt5 -y
-
-    - name: PyInstaller Linux
-      uses: JackMcKew/pyinstaller-action-linux@main
-      with:
-        path: .
-
-    - name: PyInstaller Windows
-      uses: JackMcKew/pyinstaller-action-windows@main
-      with:
-        path: .
-
-    - uses: actions/upload-artifact@v2
-      with:
-        name: FastFlix
-        path: ./dist/
